--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>বাকচক্র একাডেমী </title>    
+		<title>একাডেমী </title>    
 		<link rel="icon" href="./images/icon/micon.png" type="image/x-icon" />
 		<link rel="shortcut icon" href="./images/micon.png" type="image/x-icon" />            
 		<meta name="description" content="Bakchakra Academy - Best cultural academy of Dhaka" />
@@ -1022,7 +1022,7 @@
 												<div class="slider">
 													<div class="img-box">
 														
-														<img style="height:310px;width:100%;"  src="./images/a.jpg" class="slider-img" />
+														<img style="height:310px;width:100%;"  src="./images/a.JPG" class="slider-img" />
 													</div>
 														<button class="btn" onclick="prev()">prev</button>
 													<button class="btn" onclick="next()">Next</button> 
