--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
 								<div  class="col-lg-10 col-md-10 col-sm-10 scrool_2">
 									<marquee direction = "left" scrollamount="4px" onmouseover="this.stop()" onmouseout="this.start()">								 
 										<!-- Notice 1 start -->
-										<h4><i class="fa fa-bullhorn color"></i>  ভর্তি চলছে!  <i class="fa fa-bullhorn color"></i> <i class="fa fa-bullhorn color"></i> ভর্তি চলছে!!  বাকচক্র একাডেমিতে গিটার , নৃত্য বিভাগ , চিত্রাঙ্কণ বিভাগ  ,আবৃত্তি  বিভাগ, সুন্দর হাতের লেখা , Online ছড়া  ও সঙ্গীত বিভাগে ভর্তি চলছে!  যোগাযোগঃ বাসা নং, রোড- ,ঢাকা । মোবাইল নংঃ ০১৯, ০১৯।</h4>
+										<h4><i class="fa fa-bullhorn color"></i>  ভর্তি চলছে!  <i class="fa fa-bullhorn color"></i> <i class="fa fa-bullhorn color"></i> ভর্তি চলছে!!  একাডেমিতে গিটার , নৃত্য বিভাগ , চিত্রাঙ্কণ বিভাগ  ,আবৃত্তি  বিভাগ, সুন্দর হাতের লেখা , Online ছড়া  ও সঙ্গীত বিভাগে ভর্তি চলছে!  যোগাযোগঃ বাসা নং, রোড- ,ঢাকা । মোবাইল নংঃ ০১৯, ০১৯।</h4>
 									</marquee>
 								</div>
 							</div>
